5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_1559.log
== SUBMITION (2019-03-13 12:01:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(upper("Ada Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME:
0.146032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia"))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:02:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia"),(upper)
-- EXECUTION TIME:
0.135863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia"),(upper)
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:03:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia"(upper))
-- EXECUTION TIME:
0.125176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia"(upper))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:03:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia",(upper))
-- EXECUTION TIME:
0.153865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia",(upper))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:04:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia".(upper))
-- EXECUTION TIME:
0.154867
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia".(upper))
                                                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:12:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace\" foi a primeira programadora da historia".(upper))
-- EXECUTION TIME:
0.147431
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace\" foi a primeira programadora da historia".(upper))
                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:13:57) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace\" foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.19122
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE" FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:14:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.273913
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:14:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.182926
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:15:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia",upper())
-- EXECUTION TIME:
0.162857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia",upper())
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:15:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(upper())
-- EXECUTION TIME:
0.200109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(upper())
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:16:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.195322
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:16:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.154071
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:16:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia."upper())
-- EXECUTION TIME:
0.115197
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia."upper())
                                                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:16:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.177169
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:16:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- EXECUTION TIME:
0.118685
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:17:05) 
-- CODE:
frase =
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- EXECUTION TIME:
0.192082
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase =
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:17:10) 
-- CODE:
frase =
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- ERROR:
File "XXXX", line 1
    frase =
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:17:42) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia" .upper())
-- EXECUTION TIME:
0.119149
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:18:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.148816
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:18:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia".upper()
-- EXECUTION TIME:
0.169482
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 3
    
                                                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:18:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper()
-- EXECUTION TIME:
0.154482
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper()
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:18:57) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.177625
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:19:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:19:20) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.187549
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:19:30) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.151335
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:19:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper()")
-- EXECUTION TIME:
0.17768
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:19:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper()")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:20:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.200224
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:20:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:20:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA".upper())
-- EXECUTION TIME:
0.162687
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:21:00) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA".upper())
-- EXECUTION TIME:
0.202643
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:21:30) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.186907
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:30:25) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.171432
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:50:44) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.146451
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
